tests/suite/snapshots/suite__case_g7je.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: c\r\n d: 1\r\n"
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0

