tests/suite/snapshots/suite__case_g992.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Folded
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 1
- token: Scalar
  start:
    index: 4
    line: 1
    column: 1
  end:
    index: 10
    line: 1
    column: 7
- token: ScalarSpace
  start:
    index: 10
    line: 1
    column: 7
  end:
    index: 12
    line: 2
    column: 0
- token: Indent
  start:
    index: 12
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 1
- token: Scalar
  start:
    index: 13
    line: 2
    column: 1
  end:
    index: 17
    line: 2
    column: 5
- token: ScalarBreak
  start:
    index: 17
    line: 2
    column: 5
  end:
    index: 19
    line: 3
    column: 0
- token: Indent
  start:
    index: 19
    line: 3
    column: 0
  end:
    index: 19
    line: 3
    column: 0
- token: Break
  start:
    index: 19
    line: 3
    column: 0
  end:
    index: 21
    line: 4
    column: 0
- token: Indent
  start:
    index: 21
    line: 4
    column: 0
  end:
    index: 21
    line: 4
    column: 0
- token: Break
  start:
    index: 21
    line: 4
    column: 0
  end:
    index: 23
    line: 5
    column: 0

