tests/suite/snapshots/suite__case_g9hc.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: &anchor\r\n- a\r\n- b\r\n"
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0

