tests/suite/snapshots/suite__case_gdy7.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: this is #not a: key\r\n"
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0

