tests/suite/snapshots/suite__case_gh63.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: MappingKey
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Separator
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Scalar
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: MappingValue
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: Separator
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 7
    line: 1
    column: 2
- token: Scalar
  start:
    index: 7
    line: 1
    column: 2
  end:
    index: 10
    line: 1
    column: 5
- token: Break
  start:
    index: 10
    line: 1
    column: 5
  end:
    index: 12
    line: 2
    column: 0
- token: Indent
  start:
    index: 12
    line: 2
    column: 0
  end:
    index: 12
    line: 2
    column: 0
- token: Scalar
  start:
    index: 12
    line: 2
    column: 0
  end:
    index: 19
    line: 2
    column: 7
- token: MappingValue
  start:
    index: 19
    line: 2
    column: 7
  end:
    index: 20
    line: 2
    column: 8
- token: Separator
  start:
    index: 20
    line: 2
    column: 8
  end:
    index: 21
    line: 2
    column: 9
- token: Scalar
  start:
    index: 21
    line: 2
    column: 9
  end:
    index: 22
    line: 2
    column: 10
- token: Break
  start:
    index: 22
    line: 2
    column: 10
  end:
    index: 24
    line: 3
    column: 0

