tests/suite/snapshots/suite__case_gt5m.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: &node\r\n- item2\r\n"
  start:
    index: 9
    line: 1
    column: 0
  end:
    index: 9
    line: 1
    column: 0

