tests/suite/snapshots/suite__case_h2rw.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: MappingValue
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Separator
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 5
    line: 0
    column: 5
- token: Scalar
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: Break
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 10
    line: 2
    column: 0
- token: Indent
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 10
    line: 2
    column: 0
- token: Scalar
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 3
- token: MappingValue
  start:
    index: 13
    line: 2
    column: 3
  end:
    index: 14
    line: 2
    column: 4
- token: Separator
  start:
    index: 14
    line: 2
    column: 4
  end:
    index: 15
    line: 2
    column: 5
- token: Scalar
  start:
    index: 15
    line: 2
    column: 5
  end:
    index: 16
    line: 2
    column: 6
- token: Break
  start:
    index: 16
    line: 2
    column: 6
  end:
    index: 18
    line: 3
    column: 0
- token: Separator
  start:
    index: 18
    line: 3
    column: 0
  end:
    index: 22
    line: 3
    column: 4
- token: Break
  start:
    index: 22
    line: 3
    column: 4
  end:
    index: 24
    line: 4
    column: 0
- token: Indent
  start:
    index: 24
    line: 4
    column: 0
  end:
    index: 24
    line: 4
    column: 0
- token: Scalar
  start:
    index: 24
    line: 4
    column: 0
  end:
    index: 28
    line: 4
    column: 4
- token: MappingValue
  start:
    index: 28
    line: 4
    column: 4
  end:
    index: 29
    line: 4
    column: 5
- token: Separator
  start:
    index: 29
    line: 4
    column: 5
  end:
    index: 30
    line: 4
    column: 6
- token: Literal
  start:
    index: 30
    line: 4
    column: 6
  end:
    index: 31
    line: 4
    column: 7
- token: Break
  start:
    index: 31
    line: 4
    column: 7
  end:
    index: 33
    line: 5
    column: 0
- token: Indent
  start:
    index: 33
    line: 5
    column: 0
  end:
    index: 35
    line: 5
    column: 2
- token: Scalar
  start:
    index: 35
    line: 5
    column: 2
  end:
    index: 36
    line: 5
    column: 3
- token: ScalarBreak
  start:
    index: 36
    line: 5
    column: 3
  end:
    index: 38
    line: 6
    column: 0
- token: Indent
  start:
    index: 38
    line: 6
    column: 0
  end:
    index: 40
    line: 6
    column: 2
- token: Scalar
  start:
    index: 40
    line: 6
    column: 2
  end:
    index: 42
    line: 6
    column: 4
- token: ScalarBreak
  start:
    index: 42
    line: 6
    column: 4
  end:
    index: 44
    line: 7
    column: 0
- token: Indent
  start:
    index: 44
    line: 7
    column: 0
  end:
    index: 46
    line: 7
    column: 2
- token: Scalar
  start:
    index: 46
    line: 7
    column: 2
  end:
    index: 47
    line: 7
    column: 3
- token: ScalarBreak
  start:
    index: 47
    line: 7
    column: 3
  end:
    index: 49
    line: 8
    column: 0
- token: Indent
  start:
    index: 49
    line: 8
    column: 0
  end:
    index: 49
    line: 8
    column: 0
- token: ScalarBreak
  start:
    index: 49
    line: 8
    column: 0
  end:
    index: 51
    line: 9
    column: 0
- token: Indent
  start:
    index: 51
    line: 9
    column: 0
  end:
    index: 53
    line: 9
    column: 2
- token: Scalar
  start:
    index: 53
    line: 9
    column: 2
  end:
    index: 54
    line: 9
    column: 3
- token: ScalarBreak
  start:
    index: 54
    line: 9
    column: 3
  end:
    index: 56
    line: 10
    column: 0
- token: Indent
  start:
    index: 56
    line: 10
    column: 0
  end:
    index: 57
    line: 10
    column: 1
- token: ScalarBreak
  start:
    index: 57
    line: 10
    column: 1
  end:
    index: 59
    line: 11
    column: 0
- token: Indent
  start:
    index: 59
    line: 11
    column: 0
  end:
    index: 61
    line: 11
    column: 2
- token: Scalar
  start:
    index: 61
    line: 11
    column: 2
  end:
    index: 62
    line: 11
    column: 3
- token: ScalarBreak
  start:
    index: 62
    line: 11
    column: 3
  end:
    index: 64
    line: 12
    column: 0

