tests/suite/snapshots/suite__case_h3z8.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 6
- token: MappingValue
  start:
    line: 1
    column: 6
  end:
    line: 1
    column: 7
- token: Separator
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: Scalar
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 30
- token: Break
  start:
    line: 1
    column: 30
  end:
    line: 2
    column: 0

