tests/suite/snapshots/suite__case_h7j7.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \"!!map\\r\\n  a: b\\r\\n\""
  start:
    index: 9
    line: 1
    column: 0
  end:
    index: 9
    line: 1
    column: 0

