tests/suite/snapshots/suite__case_hm87_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceStart
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Scalar
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 0
    column: 3
- token: SequenceEnd
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Break
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 6
    line: 1
    column: 0

